--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   <body>
     <h1>Discover hidden places in the world around you</h1>
     <p><a href="">Download Excursion (Coming Soon!)</a></p>
+    <h2>Your personal travel guide</h2>
+    <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+    <h3>Coming Soon for iPhone and Android</h3>
+    <p><a href="">Download Excursion (Coming Soon!)</a></p>
 
   </body>
 </html>
