--- a/index.html
+++ b/index.html
@@ -2,14 +2,17 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link href="./resources/style.css" type="text/css" rel="stylesheet">
     <title>Excursion</title>
+    <link href="./resources/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
     <h1>Discover hidden places in the world around you</h1>
     <p><a href="">Download Excursion (Coming Soon!)</a></p>
+      <video src="./resources/vidoes/Stock video.mp4"/>
     <h2>Your personal travel guide</h2>
     <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+      <img src="resources/images/camp.jpg"/>
+      <img src="resources/images/phone.png"/>
     <h3>Coming Soon for iPhone and Android</h3>
     <p><a href="">Download Excursion (Coming Soon!)</a></p>
 
