Changed images, video and links

--- a/index.html
+++ b/index.html
@@ -3,18 +3,17 @@
   <head>
     <meta charset="utf-8">
     <title>Excursion</title>
-    <link href="./resources/style.css" type="text/css" rel="stylesheet">
+    <link href="resources/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
     <h1>Discover hidden places in the world around you</h1>
-    <p><a href="">Download Excursion (Coming Soon!)</a></p>
-      <video src="./resources/vidoes/Stock video.mp4"/>
+    <p><a href="file:///C:/Users/amjwo/OneDrive/Documents/Projects/excursion/index.html">Download Excursion (Coming Soon!)</a></p>
+      <video src="C:\Users\amjwo\OneDrive\Documents\Projects\excursion\resources\videos\Stock video.mp4"/>
     <h2>Your personal travel guide</h2>
     <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
-      <img src="resources/images/camp.jpg"/>
-      <img src="resources/images/phone.png"/>
+      <img src="C:\Users\amjwo\OneDrive\Documents\Projects\excursion\resources\images\camp.jpg"/>
+      <img src="C:\Users\amjwo\OneDrive\Documents\Projects\excursion\resources\images\phone.png"/>
     <h3>Coming Soon for iPhone and Android</h3>
-    <p><a href="">Download Excursion (Coming Soon!)</a></p>
-
+    <p><a href="file:///C:/Users/amjwo/OneDrive/Documents/Projects/excursion/index.html">Download Excursion (Coming Soon!)</a></p>
   </body>
 </html>
