--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
       <img src="C:\Users\amjwo\OneDrive\Documents\Projects\excursion\resources\images\camp.jpg"/>
       <img src="C:\Users\amjwo\OneDrive\Documents\Projects\excursion\resources\images\phone.png"/>
-    <h3>Coming Soon for iPhone and Android</h3>
+    <h2>Coming Soon for iPhone and Android</h2>
     <p><a href="file:///C:/Users/amjwo/OneDrive/Documents/Projects/excursion/index.html">Download Excursion (Coming Soon!)</a></p>
+    <p>© Excursion</p>
   </body>
 </html>
