--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
   </head>
   <body>
     <h1>Discover hidden places in the world around you</h1>
-    <p><a href="file:///C:/Users/amjwo/OneDrive/Documents/Projects/excursion/index.html">Download Excursion (Coming Soon!)</a></p>
+    <p class="link"><a href="file:///C:/Users/amjwo/OneDrive/Documents/Projects/excursion/index.html">Download Excursion (Coming Soon!)</a></p>
       <video src="C:\Users\amjwo\OneDrive\Documents\Projects\excursion\resources\videos\Stock video.mp4"/>
     <h2>Your personal travel guide</h2>
-    <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+    <p class="description">Excursion remembers places you like, and recommends new points of interest around you.</p>
       <img src="C:\Users\amjwo\OneDrive\Documents\Projects\excursion\resources\images\camp.jpg"/>
       <img src="C:\Users\amjwo\OneDrive\Documents\Projects\excursion\resources\images\phone.png"/>
     <h2>Coming Soon for iPhone and Android</h2>
-    <p><a href="file:///C:/Users/amjwo/OneDrive/Documents/Projects/excursion/index.html">Download Excursion (Coming Soon!)</a></p>
-    <p>© Excursion</p>
+    <p class="link"><a href="file:///C:/Users/amjwo/OneDrive/Documents/Projects/excursion/index.html">Download Excursion (Coming Soon!)</a></p>
+    <p id="copyright">© Excursion</p>
   </body>
 </html>
